<attachment> turns the wrong blue when you highlight it https://bugs.webkit.org/show_bug.cgi?id=141853

Reviewed by Simon Fraser.

* rendering/RenderAttachment.h:
* rendering/RenderReplaced.cpp:
(WebCore::RenderReplaced::shouldDrawSelectionTint):
(WebCore::RenderReplaced::paint):
* rendering/RenderReplaced.h:
Don't draw the selection tint for RenderAttachment.


Canonical link: https://commits.webkit.org/159888@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180455 268f45cc-cd09-0410-ab3c-d52691b4dbfc