Source/WebCore/rendering/RenderAttachment.h
@@ -47,6 +47,8 @@ private:
     virtual bool isAttachment() const override { return true; }
     virtual const char* renderName() const override { return "RenderAttachment"; }
     virtual void paintReplaced(PaintInfo&, const LayoutPoint&) override;
+
+    virtual bool shouldDrawSelectionTint() const override { return false; }
 };
 
 } // namespace WebCore
